Segundo Commit (estilização com css)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Neste site você terá acesso a todas as redes sociais e contatos do Rafael Barros">
     <title>Landing Page - Rafael Barros</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -22,7 +23,13 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Github</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Site de hospedagem para todos os meus estudos em Programação</h2>
-                <button class=" ">Clique para conferir!</button>
+                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
+                <h1 class="conteudo-principal-escrito-titulo">Linkedin</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">Confira minha rede no linkedin!</h2>
+                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
+                <h1 class="conteudo-principal-escrito-titulo">Linkedin</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">Confira minha rede no linkedin!</h2>
+                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
             </div>
             <img class="conteudo-principal-imagem" src="./assets/img/ballebot.svg" alt="Logo Github">
         </section>
