3º Commit - Inclusão página História e Metas Profissionais

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="./assets/img/logo.svg" alt="Logo Landing Page">
+        <img class="cabecalho-imagem" src="./assets/img/logoPagSemFundo.png" alt="Logo Landing Page">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item">História</a>
-            <a class="cabecalho-menu-item">Metas Pessoas</a>
-            <a class="cabecalho-menu-item">Metas Profissionais</a>
-            <a class="cabecalho-menu-item">Contato</a>
+            <a href="./index.html" class="cabecalho-menu-item">Home</a>
+            <a href="./historia.html" class="cabecalho-menu-item">História</a>
+            <a href="./metasProfissionais.html" class="cabecalho-menu-item">Metas Profissionais</a>
+            <a href="./contato.html" class="cabecalho-menu-item">Contato</a>
         </nav>
     </header>
 
@@ -22,27 +22,33 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Github</h1>
-                <h2 class="conteudo-principal-escrito-subtitulo">Site de hospedagem para todos os meus estudos em Programação</h2>
-                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
+                <h2 class="conteudo-principal-escrito-subtitulo">Site de hospedagem para os meus repositórios</h2>
+                <button class="conteudo-principal-escrito-botao">
+                    <a class="conteudo-principal-escrito-botao-link" 
+                       href="https://github.com/dev-rafael92as"
+                            >Clique para conferir!
+                    </a>
+                </button>
                 <h1 class="conteudo-principal-escrito-titulo">Linkedin</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Confira minha rede no linkedin!</h2>
-                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
-                <h1 class="conteudo-principal-escrito-titulo">Linkedin</h1>
-                <h2 class="conteudo-principal-escrito-subtitulo">Confira minha rede no linkedin!</h2>
-                <button class="conteudo-principal-escrito-botao">Clique para conferir!</button>
+                <button class="conteudo-principal-escrito-botao">
+                    <a href="https://www.linkedin.com/in/rafael92as/"
+                       class="conteudo-principal-escrito-botao-link" 
+                    >Clique para conferir!</a>
+                </button>
             </div>
-            <img class="conteudo-principal-imagem" src="./assets/img/ballebot.svg" alt="Logo Github">
+            <img class="conteudo-principal-imagem" src="./assets/img/logotipoSemFundo.png" alt="Logo Github">
         </section>
         <section class="conteudo-secundario">
-            <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
-            <p class="conteudo-secundario-texto">1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
-            <p class="conteudo-secundario-texto">2. Possui um sistema de banimento automático para links suspeitos que forem enviados na comunidade</p>
-            <p class="conteudo-secundario-texto">3. Sistema de avisos e banimento manual, para pessoas administradoras utilizarem</p>
+            <h3 class="conteudo-secundario-titulo">Quais os principais objetivos na carreira?</h3>
+            <p class="conteudo-secundario-texto">1. Desenvolver as habilidades para resolver problemas de forma eficiente e inteligente.</p>
+            <p class="conteudo-secundario-texto">2. Ter meu trabalho reconhecido dentro do trabalho e com isso ajudar a empresa a crescer e atingir sua missão.</p>
+            <p class="conteudo-secundario-texto">3. </p>
         </section>
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="./assets/img/BALLERINI.svg">
+        <p class="rodape-texto">Todos os direitos reservador &copy Rafael Barros</p>
     </footer>
 </body>
 </html>
